--- a/apache/default.conf
+++ b/apache/default.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
-   ServerName laravel_docker
-   DocumentRoot /var/www/public
+   ServerName rts-app
+   DocumentRoot /var/www/rts-app/public
 
-   <Directory /var/www>
+   <Directory /var/www/rts-app>
        AllowOverride All
    </Directory>
    ErrorLog ${APACHE_LOG_DIR}/error.log
