--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,37 @@
 version: "3.7"
 services:
-    rts_app1_app:
+    rts-app:
         build:
             context: ./
             dockerfile: Dockerfile
-        image: php
-        container_name: rts_app1_app
+        image: rts-app:1.0
+        container_name: rts-app
         restart: unless-stopped
-        working_dir: /var/www/
+        working_dir: /var/www/rts-app
         ports:
             - "8090:80"
         volumes:
-            - ./:/var/www
+            - ./:/var/www/rts-app
             - ./apache/default.conf:/etc/apache2/sites-enabled/000-default.conf
         depends_on:
-            - rts_app1_app_mysql_db
-        networks:
-            - "rts-app"
-
-    rts_app1_app_mysql_db:
-        image: mysql:8.0
-        container_name: rts_app1_app_mysql
-        restart: unless-stopped
-        environment:
-            MYSQL_DATABASE: ${DB_DATABASE}
-            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-            MYSQL_PASSWORD: ${DB_PASSWORD}
-            MYSQL_USER: ${DB_USERNAME}
-            MYSQL_ALLOW_EMPTY_PASSWORD: 1
-            SERVICE_TAGS: dev
-            SERVICE_NAME: mysql
-        volumes:
-            - ./data/mysql:/var/lib/mysql
+            - mysql-db
+    mysql-db:
+        image: mysql:8.0.32
+        restart: always
+        container_name: mysql-db
         ports:
-            - "3309:3306"
-        networks:
-            - "rts-app"
+            - 3308:3306
+        environment:
+            MYSQL_DATABASE: music
+            MYSQL_ROOT_PASSWORD: root
+            MYSQL_USER: music
+            MYSQL_PASSWORD: music
+        volumes:
+            - ./dump:/docker-entrypoint-initdb.d
+            - mysql_data:/var/lib/mysql
+volumes:
+    mysql_data:            
 networks:
-    rts-app:
-        driver: bridge
+    default:
+        external: true
+        name: cicd
